// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <MultipleCustomHooks /> debe de mostrar la información 1`] = `
<div>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <p>
    Frase numero: 
    1
  </p>
  <blockquote
    className="text-end blockquote"
  >
    <p
      id="quote"
    >
      Hola Mundo
    </p>
    <footer
      className="blockquote-footer"
      id="author"
    >
      Fernando
    </footer>
  </blockquote>
  <button
    className="btn btn-primary m-1"
    onClick={[Function]}
    type="button"
  >
    Anterior frase
  </button>
  <button
    className="btn btn-primary m-1"
    onClick={[Function]}
    type="button"
  >
    Siguiente frase
  </button>
</div>
`;

exports[`Pruebas en <MultipleCustomHooks /> debe de mostrarse correctamente 1`] = `
<div>
  <h1>
    BreakingBad Quotes
  </h1>
  <hr />
  <p>
    Frase numero: 
    1
  </p>
  <div
    className="alert alert-info text-center"
  >
    Loading...
  </div>
  <button
    className="btn btn-primary m-1"
    onClick={[Function]}
    type="button"
  >
    Anterior frase
  </button>
  <button
    className="btn btn-primary m-1"
    onClick={[Function]}
    type="button"
  >
    Siguiente frase
  </button>
</div>
`;
